feat: Add random method for words API and support neq, in, nin operators
